--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -18,6 +20,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.1"
   },
